--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,7 +41,7 @@ structlog==23.2.0
 rich==13.7.0  # Enhanced logging output
 
 # Security and validation
-cryptography==41.0.8
+cryptography>=42.0.0
 bcrypt==4.1.2
 
 # Testing (optional)
@@ -52,4 +52,5 @@ httpx==0.25.2  # For testing async endpoints
 # Development tools (optional)
 black==23.11.0
 flake8==6.1.0
+
 mypy==1.7.1
