--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,23 @@
-# Stage 1: Build React app
-FROM node:18 AS build
+# Use Node.js base image
+FROM node:16-alpine
 
+# Set working directory
 WORKDIR /app
 
-# Copy only frontend package.json first (for caching)
-COPY frontend/package*.json ./
+# Copy package.json and package-lock.json
+COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
 # Copy the rest of the frontend code
-COPY frontend/ ./
+COPY . ./
 
-# Build React app
-RUN npm run build
+# Build React app (optional, for production)
+# RUN npm run build
 
-# Stage 2: Serve with Nginx
-FROM nginx:alpine
+# Expose port 3000
+EXPOSE 3000
 
-# Copy React build into nginx html folder
-COPY --from=build /app/build /usr/share/nginx/html
-
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Start the application
+CMD ["npm", "start"]
