--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,17 +4,17 @@ FROM node:16-alpine
 # Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
+# Copy package.json and package-lock.json from the FINAL/frontend directory
+COPY FINAL/frontend/package*.json ./
 
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the frontend code
-COPY . ./
+# Copy the rest of the frontend code from FINAL/frontend (including public folder)
+COPY FINAL/frontend/ ./
 
-# Build React app (optional, for production)
-# RUN npm run build
+# Verify public/index.html exists (debugging step)
+RUN ls -la public/
 
 # Expose port 3000
 EXPOSE 3000
